--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
     <!-- Founders Messages-->
 
     <div class="row">
-      <div class="col-12 col-md-4" style="border: solid 1px black;">
+      <div class="col-12 col-md-4">
         <img src="images/headshot-dan.jpg" alt="Dan Image" class="img-fluid border rounded-left border-lg border-0">
       </div>
-      <div class="col-12 col-md-8 bg-white p-5 d-flex align-items-center border rounded-right border-dark border-lg"
-        style="border: solid 3px blue;">
+      <div class="col-12 col-md-8 bg-white p-5 d-flex align-items-center border rounded-right border-dark border-lg">
         <section>
           <h2>Message from Founders</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur impedit aperiam repudiandae rem, explicabo
