--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <nav class="navbar navbar-light bg-outline-light">
         <a class="navbar-brand" href="#">
-          <img src="/images/logo-dans-meat-yogurt.svg " alt="Image Dan">
+          <img src="/images/logo-dans-meat-yogurt.svg " alt="Image Dan" style="width: 100px;">
         </a>
       </nav>
 
