5 change in nav

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <nav class="navbar navbar-light bg-outline-light">
         <a class="navbar-brand" href="#">
-          <img src="images/aman-images.webp" alt="Image Dan" style="height: 100px; width: 100px; " class="img-fluid" >
+          <img src="images/logo-dans-meat-yogurt.svg" alt="Image Dan" style="height: 100px; width: 100px; " class="img-fluid" >
         </a>
       </nav>
 
